Source/JavaScriptCore/dfg/DFGWorklist.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013, 2014 Apple Inc. All rights reserved.
+ * Copyright (C) 2013, 2014, 2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -75,6 +75,8 @@ public:
     // Only called on the main thread after suspending all threads.
     void visitWeakReferences(SlotVisitor&);
     void removeDeadPlans(VM&);
+    
+    void removeNonCompilingPlansForVM(VM&);
     
     void dump(PrintStream&) const;
     
